<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backdrop_tvShow"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/Primary_Dark"/>

            <ImageView
                android:id="@+id/detail_tvShow_poster"
                android:layout_width="180dp"
                android:layout_height="240dp"
                android:layout_marginTop="180dp"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:backgroundTint="@color/Secondary_Light"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="@string/button_favorite"
                app:borderWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.754"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_tvShow_poster"
                app:maxImageSize="32dp" />

            <TextView
                android:id="@+id/tv_tvShow_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:maxLines="2"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_tvShow_poster" />

            <RatingBar
                android:id="@+id/tvShow_RatingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tvShow_title" />

            <TextView
                android:id="@+id/tvShow_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/release_data_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvShow_RatingBar"
                app:layout_constraintTop_toBottomOf="@+id/tvShow_RatingBar" />

            <TextView
                android:id="@+id/tv_tvShow_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/release_date"
                app:layout_constraintBottom_toBottomOf="@+id/tvShow_release_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvShow_release_date_label"
                app:layout_constraintTop_toTopOf="@+id/tvShow_release_date_label"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvShow_overview_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvShow_RatingBar"
                app:layout_constraintTop_toBottomOf="@+id/tvShow_release_date_label" />

            <TextView
                android:id="@+id/tv_tvShow_textOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_for_overview"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvShow_overview_label"
                app:layout_constraintStart_toStartOf="@+id/tv_tvShow_release"
                app:layout_constraintTop_toTopOf="@+id/tvShow_overview_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>